--- a/Dockerfile.devel
+++ b/Dockerfile.devel
@@ -45,8 +45,7 @@ RUN pip install mock grpcio
 #    cd / && \
 #    rm -f /bazel/bazel-$BAZEL_VERSION-installer-linux-x86_64.sh
 RUN pip install tensorflow-serving-api
-RUN echo "deb [arch=amd64] http://storage.googleapis.com/tensorflow-serving-apt stable tensorflow-model-server tensorflow-model-server-universal" |  tee /etc/apt/sources.list.d/tensorflow-serving.
-list
+RUN echo "deb [arch=amd64] http://storage.googleapis.com/tensorflow-serving-apt stable tensorflow-model-server tensorflow-model-server-universal" |  tee /etc/apt/sources.list.d/tensorflow-serving.list
 RUN curl https://storage.googleapis.com/tensorflow-serving-apt/tensorflow-serving.release.pub.gpg |  apt-key add -
 RUN  apt-get update &&  apt-get install tensorflow-model-server-universal
 CMD ["/bin/bash"]
